// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Box Box Background 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  color: #ffffff;
  background-color: #32354c;
  margin-bottom: 0.75rem;
}

.emotion-3 {
  background-color: #ffffff;
  margin-bottom: 0.75rem;
}

.emotion-4 {
  background-color: rgba(0,0,0,0);
  margin-bottom: 0.75rem;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      Background Inverted
    </div>
    <div
      className="emotion-3"
    >
      Background Light
    </div>
    <div
      className="emotion-4"
    >
      Background Transparent
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Box Box Horizontal Padding 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  background-color: #ffffff;
  padding: 0 1.25rem;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      Padding Horizontal 7
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Box Box Padding (All sides) 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  background-color: #ffffff;
  padding: 0.25rem;
  margin-bottom: 0.75rem;
}

.emotion-3 {
  background-color: #ffffff;
  padding: 1.25rem;
  margin-bottom: 0.75rem;
}

.emotion-4 {
  background-color: #ffffff;
  padding: 2.75rem;
  margin-bottom: 0.75rem;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      Padding 3
    </div>
    <div
      className="emotion-3"
    >
      Padding 7
    </div>
    <div
      className="emotion-4"
    >
      Padding 12
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Box Box Vertical Padding 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  background-color: #ffffff;
  padding: 1.25rem 0;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      Padding Vertical 7
    </div>
  </div>
</div>
`;
